demo-yaml-dir/demo-b/demo-b-vault.yaml
# Copyright 2019 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# istio-springboot-demo-a service
##################################################################################################
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: httpbin
# ---
apiVersion: v1
kind: Service
metadata:
  name: istio-springboot-demo-b
  labels:
    app: istio-springboot-demo-b
    service: istio-springboot-demo-b
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8081
  selector:
    app: istio-springboot-demo-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-springboot-demo-b-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istio-springboot-demo-b
      version: v1
  template:
    metadata:
      labels:
        app: istio-springboot-demo-b
        version: v1
    spec:
      serviceAccountName: istio-demo    
      containers:
      - image: demo-istio-springboot-demo-b:1.0-SNAPSHOT
        imagePullPolicy: IfNotPresent
        name: istio-springboot-demo-b
        # resources:
        #   limits:
        #     cpu: "500m"
        #     memory: "200Mi"
        #   requests:
        #     cpu: "500m"
        #     memory: "200Mi"
        ports:
        - containerPort: 8081

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-springboot-demo-b-latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istio-springboot-demo-b
      version: latest
  template:
    metadata:
      labels:
        app: istio-springboot-demo-b
        version: latest
    spec:
      serviceAccountName: istio-demo    
      containers:
      - image: demo-istio-springboot-demo-b:latest
        # resources:
        #   limits:
        #     cpu: "500m"
        #     memory: "200Mi"
        #   requests:
        #     cpu: "500m"
        #     memory: "200Mi"
        imagePullPolicy: IfNotPresent
        name: istio-springboot-demo-b
        ports:
        - containerPort: 8081
