demo-yaml-dir/demo-b/demo-b-gateway-multiversion.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-springboot-demo-b-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "demob.istiodemos.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-springboot-demo-b-dr
spec:
  host: istio-springboot-demo-b
  trafficPolicy:
    loadBalancer:
        simple: LEAST_CONN
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: latest
    labels: 
      version: latest
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-springboot-demo-b-vs
spec:
  hosts:
  - "demob.istiodemos.com"
  gateways:
  - istio-springboot-demo-b-gateway
  http:
  - match:
    - queryParams:
        a:
          # exact: ad
          regex: ae\d+$
    route:
    - destination:
        host: istio-springboot-demo-b
        subset: v1
  - route:
    - destination:
        host: istio-springboot-demo-b
        subset: latest
